# Test_jinchao

./: README.md  aqaa.py  fig.py  github.txt  globt.py  intrinsic.json  main.txt  multi_bar.py  multi_compare.py  multi_fig.py  requirements.txt  slice.py  soc_info.txt  sort_file.py  test.sh  test65_1101.txt  test70_1101.txt  test75_1101.txt  test76_1101.txt  test_pull_request  test_second_notopen.txt  test_second_open123.txt  test_second_open456.txt  two_compare.py
cereal_Learn/: CMakeLists.txt  fork001.cpp
cppcode_single/: CMakeLists.txt  class.cpp  class.h  fork001.cpp
npu_load/: load.txt  load3.txt  npu_load.py
openCV/: CMakeLists.txt  Timer.h  fork001.cpp  main.cpp
qibing/: test_second_open123.txt
share/: 001glob___t.py  003aaa.py  004socket_learn.py  005numpy.py  calib_intrinsic.py  datatime.py  pristr.py  slice.py
test_document/qibing/: test_second_open456.txt
test_qingbing_first1106/: test_qibing1450.txt  test_qibing1600_open_123.txt  test_qibing1600_open_456.txt
